--- a/config/database.yml
+++ b/config/database.yml
@@ -18,8 +18,11 @@ default: &default
   socket: /var/run/mysqld/mysqld.sock
 
 development:
-  <<: *default
   database: dbdotz_development
+  adapter: mysql2
+  host: "localhost"
+  username: root
+  password: "carros2015"
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -27,6 +30,10 @@ development:
 test:
   <<: *default
   database: dbdotz_test
+  adapter: mysql2
+  host: "localhost"
+  username: root
+  password: "carros2015"
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
