--- a/config/database.yml
+++ b/config/database.yml
@@ -51,11 +51,11 @@ test:
 #
 # You can use this database configuration with:
 #
-#   production:
-#     url: <%= ENV['DATABASE_URL'] %>
-#
-production:
-  <<: *default
-  database: dbdotz_production
-  username: dbdotz
-  password: <%= ENV['DBDOTZ_DATABASE_PASSWORD'] %>
+  production:
+    url: <%= ENV['DATABASE_URL'] %>
+
+# production:
+#   <<: *default
+#   database: dbdotz_production
+#   username: dbdotz
+#   password: <%= ENV['DBDOTZ_DATABASE_PASSWORD'] %>
