change production db database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -52,6 +52,7 @@ test:
 # You can use this database configuration with:
 #
   production:
+      adapter: mysql2
     url: <%= ENV['DATABASE_URL'] %>
 
 # production:
