--- a/config/database.yml
+++ b/config/database.yml
@@ -52,8 +52,7 @@ test:
 # You can use this database configuration with:
 #
   production:
-      adapter: mysql2
-    url: <%= ENV['DATABASE_URL'] %>
+    url: "mysql://b0cf5b5996afd4:00beabe1@us-cdbr-iron-east-01.cleardb.net/heroku_da6b6b212caf51e?reconnect=true"
 
 # production:
 #   <<: *default
