--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,8 @@ development:
   database: dbdotz_development
   adapter: mysql2
   host: "localhost"
-  username: userdotz
-  password: password
+  username: root
+  password: carros2015
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -32,8 +32,8 @@ test:
   database: dbdotz_test
   adapter: mysql2
   host: "localhost"
-  username: userdotz
-  password: password
+  username: root
+  password: carros2015
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
